Real-time metrics: 1s buckets and UI update
Fetch and present per-second real-time metrics for the last minute.

Backend: replace coarse/hourly grouping with a new JPQL method (findLastMinuteMetrics) that retrieves records from the last minute, build 60 one-second buckets (LinkedHashMap to preserve order), populate counts from TurSNSiteMetricAccess and return epoch second, displayTime and accesses. This also avoids previous type-mismatch issues and ensures empty seconds return zero.

Repository: add findLastMinuteMetrics(...) query to support the new backend flow.

Frontend: rename component to RealTimeDashboard, switch to AreaChart, change polling from 30s to 1s (synchronized with backend 1s buckets), adapt X axis to numeric unix seconds and improve visuals/formatting. Also minor logging/message tweaks and service instantiation placement.